Fixed popup stretched

--- a/PafreecaWeb/public/css/main.css
+++ b/PafreecaWeb/public/css/main.css
@@ -50,7 +50,7 @@ li {
     width: 350px;
     padding: 10px;
     border-radius: 15px;
-    color:white;
+    color: white;
 }
 
 .search-bar {
@@ -288,7 +288,7 @@ li {
     padding: 10px;
     border-radius: 5px;
     margin: 10px;
-    color:white;
+    color: white;
 }
 
 .pull-left {
@@ -879,26 +879,33 @@ li {
 .show_twitch h3 {
     color: #660066;
 }
+
 .show_kakao h3 {
     color: #C9AE00;
 }
+
 .show_vlive h3 {
     color: #00C6ED;
 }
+
 .show_navertv h3 {
     color: #009300;
 }
+
 .logo_output, .logo_img {
     margin: 0px 5px 0 5px;
     float: left;
 }
-.Logo_kakao{
+
+.Logo_kakao {
     margin-top: -6px
 }
-.Logo_vlive{
+
+.Logo_vlive {
     margin-top: -16px
 }
-.Logo_navertv{
+
+.Logo_navertv {
     margin-top: -6px;
 }
 
@@ -908,46 +915,53 @@ li {
     margin: 30px 0px -100px 10px;
     float: left;
 }
-.Logo_kakao2{
-    margin-top:25px;
-    margin-left:-1px;
+
+.Logo_kakao2 {
+    margin-top: 25px;
+    margin-left: -1px;
 }
-.Logo_vlive2{
-    margin-top:17px;
-    margin-left:-1px;
+
+.Logo_vlive2 {
+    margin-top: 17px;
+    margin-left: -1px;
 }
-.Logo_navertv2{
-    margin-top:24px;
-    margin-left:-1px;
+
+.Logo_navertv2 {
+    margin-top: 24px;
+    margin-left: -1px;
 }
 
 
-a p.video_url, .search_video_title, .search_video_publisher{
-    display:none;
+a p.video_url, .search_video_title, .search_video_publisher {
+    display: none;
 }
 
-a p.video_title{
+a p.video_title {
     color: #111111;
-    font-size : 20px;
-    margin-top : 5px;
-    margin-bottom : 10px;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
-a p.video_publisher{
-    color:#6E6E6E;
-    font-size:15px;
+
+a p.video_publisher {
+    color: #6E6E6E;
+    font-size: 15px;
     font-weight: bold;
 }
-p.frame_video_title{
-    color:#6E6E6E;
-    font-size : 30px;
-    margin-top : 20px;
-    margin-bottom : 10px;
-    margin-left : 10px;
+
+p.frame_video_title {
+    color: #6E6E6E;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    line-height: 40px;
 }
-p.frame_video_publisher{
+
+p.frame_video_publisher {
     color: #111111;
-    font-size:15px;
-    margin-bottom : 30px;
-    margin-left : 10px;
+    font-size: 15px;
+    margin-bottom: 30px;
+    margin-left: 10px;
     font-weight: bold;
 }
